plugins {
    id 'java'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '8.3.0'
    id("io.freefair.lombok") version "8.14"
}

group = 'net.exylia'
version = '1.0.0'

repositories {
    mavenCentral()
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://oss.sonatype.org/content/groups/public/' }
    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
    maven { url "https://maven.enginehub.org/repo/" }
    maven { url "https://repo.dmulloy2.net/repository/public/" }
    maven { url "https://repo.codemc.org/repository/maven-public/" }
    maven { url "https://repository.minecodes.pl/releases" }
    maven { url "https://maven.devs.beer/" }
    maven {
        name = "minecraft-libraries"
        url = uri("https://libraries.minecraft.net")
    }
    maven {
        name = "sundevs"
        url = uri("https://repo.hapangama.com/releases")
    }
    maven {
        name = "roinujnosde-repo"
        url = uri("https://repo.roinujnosde.me/releases/")
    }
}

dependencies {
    compileOnly 'com.zaxxer:HikariCP:5.1.0'
    compileOnly 'org.xerial:sqlite-jdbc:3.45.2.0'
    compileOnly 'mysql:mysql-connector-java:8.0.33'
    compileOnly 'io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.5'
    compileOnly 'redis.clients:jedis:5.1.0'
    compileOnly 'org.apache.commons:commons-pool2:2.12.0'
    compileOnly 'org.slf4j:slf4j-api:2.0.9'
    compileOnly 'org.slf4j:slf4j-simple:2.0.9'
    compileOnly 'com.mojang:authlib:1.5.25'
    compileOnly 'net.kyori:adventure-api:4.17.0'
    compileOnly 'net.kyori:adventure-platform-bukkit:4.3.4'
    compileOnly 'net.kyori:adventure-text-minimessage:4.17.0'
    compileOnly 'net.kyori:adventure-text-serializer-legacy:4.17.0'
    compileOnly 'org.mongodb:mongodb-driver-sync:4.11.0'
    compileOnly('com.github.MilkBowl:VaultAPI:1.7') {
        exclude group: 'org.bukkit'
        exclude group: 'org.spigotmc'
    }
    compileOnly 'com.fastasyncworldedit:FastAsyncWorldEdit-Core:2.8.4'
    compileOnly 'com.fastasyncworldedit:FastAsyncWorldEdit-Bukkit:2.8.4'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.7'
    compileOnly 'com.comphenix.protocol:ProtocolLib:5.0.0'
    compileOnly("com.github.retrooper:packetevents-spigot:2.11.1")
    compileOnly 'com.github.ben-manes.caffeine:caffeine:3.2.2'
    compileOnly 'com.google.inject:guice:7.0.0'
    compileOnly 'dev.lone:api-itemsadder:4.0.10'
    implementation 'com.github.lalyos:jfiglet:0.0.9'
    implementation 'com.hapangama:SunLicenseAPI:1.0.3'

    compileOnly 'com.github.UlrichBR:UClans-API:8.15.6'
    compileOnly "net.sacredlabyrinth.phaed.simpleclans:SimpleClans:2.19.2"
    compileOnly('com.github.cryptomorin:kingdoms:1.17.18.1-BETA') {
        transitive = false
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

shadowJar {
    archiveClassifier.set('')
}

build {
    dependsOn shadowJar
}